packages/kotlin/ttrp-frontend/src/test/resources/resolution/negative/sch-002-no-schema.ttrp
// expect: TTRP-SCH-002
container c target polars {
    s = load(stage.adhoc_csv)
}
